--- a/marketkolo/marketkolo/src/main/webapp/index.html
+++ b/marketkolo/marketkolo/src/main/webapp/index.html
@@ -29,8 +29,31 @@
                 </div>
             </div>
         </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><b>MarketPlace KoLo</b></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarColor03">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>                
+            </div>
+        </nav>
         <div class="col-md-3"><br><br>
-           <center><input type="button" name="edit" value="Crear Cliente" class="btn btn-info" id="button" onclick="location.href = 'crearCliente.html';"></center>
+            <center><input type="button" name="edit" value="Crear Cliente" class="btn btn-info" id="button" onclick="location.href = 'crearCliente.html';"></center>
         </div>
         <div class="col-md-8">
             <center><h2>Tabla Clientes</h2></center><br>
