--- a/marketkolo/marketkolo/src/main/webapp/index.html
+++ b/marketkolo/marketkolo/src/main/webapp/index.html
@@ -5,74 +5,63 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- Cargue de archivos general de la aplicación -->
         <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="./css/Menustyle.css" rel="stylesheet" type="text/css" />     
         <script src="./js/vendor/jquery-2.2.4.js"></script>
+        <script src="./js/vendor/bootstrap.js"></script>        
+
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><b>MarketPlace KoLo</b></a>
-                </div>
 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">Clientes<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Proveedores</a></li>
-                        <li><a href="#">Productos</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><b>MarketPlace KoLo</b></a>
+            <a class="navbar-brand" href=""><b>MarketPlace KoLo</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor03">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html"><i class="fa fa-home fa-2x" aria-hidden="true"></i>  Inicio</a>
                     </li>
+                    <li class="nav-item">                        
+                        <a class="nav-link" href="#"><i class="fa fa-product-hunt fa-2x" aria-hidden="true"></i>roductos</a>                        
+                    </li>                    
+                </ul>                    
+                <ul class="nav navbar-nav ml-auto"> 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
+                        <a class="nav-link" href="inicioSesion.html"><i class="fa fa-lock fa-2x" aria-hidden="true"></i>  Ingreso y registro</a>
+                    </li>  
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
+                        <div id="desconectar">
+                            <a class="nav-link" id="numDocumento"  href="#"><i class="fa fa-hand-o-right fa-2x" aria-hidden="true"></i>  Desconectado</a>
+                        </div>
+                    </li>    
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" style="color: #5bc0de;" href="#"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>  Carrito</a> 
                     </li>
                 </ul>                
             </div>
-        </nav>
-        <div class="col-md-3"><br><br>
-            <center><input type="button" name="edit" value="Crear Cliente" class="btn btn-info" id="button" onclick="location.href = 'crearCliente.html';"></center>
-        </div>
-        <div class="col-md-8">
-            <center><h2>Tabla Clientes</h2></center><br>
-            <div id="tableClientes">
-                <table class="table table-striped">
-                    <thead>
-                    <th>Nombres</th>
-                    <th>Apellidos</th>
-                    <th>Telefono</th>
-                    <th>Correo</th>
-                    <th>Dirección</th>
-                    <th colspan="2">Acciones</th>
-                    </thead>
-                    <tbody> </tbody>
-                </table>
-            </div>
-            <script src="./js/cliente.js"></script>
-        </div>
-        <div class="col-md-1">
-        </div>
+        </nav><br><br><br>
+
+        <header id="home" class="home">
+            <div class="overlay-img">
+                <div class="container">
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="home-content">
+                                <h5>Bienvenido a</h5>
+                                <h1>MARKETPLACE <span>Kolo</span></h1>                                
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>	
+        </header>
+              
+        
+        <script src="./js/ventana2.js"></script>
     </body>
 </html>
