Correcion ProveedorEntity: Se quitó el atributo urlChat.

--- a/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
+++ b/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
@@ -184,7 +184,7 @@
                                     <span></span>
                                 </div>
                                 <div class="form-group">                                     
-                                    <input type="number" class="form-control" id="nit" placeholder="# Nit">                                        
+                                    <input type="number" class="form-control" id="nit" placeholder="#Nit">                                        
                                 </div>
                                 <div class="form-group">                                                                      
                                     <input type="text" class="form-control" id="nombrepro" placeholder="Nombre">                                      
@@ -193,17 +193,17 @@
                                     <input type="text" class="form-control" id="clavepro" placeholder="Contraseña">                                     
                                 </div>
                                 <div class="form-group">                                        
-                                    <input type="text" class="form-control" id="telefonopro" placeholder="# Telefono">                                     
+                                    <input type="text" class="form-control" id="telefonopro" placeholder="#Telefono">                                     
                                 </div>
                                 <div class="form-group">                                                                                
                                     <input type="text" class="form-control" id="direccionpro" placeholder="Direccion atencion">                                      
                                 </div>
                                 <div class="form-group">                                       
-                                    <input type="number" class="form-control" id="telefono" placeholder="# Ventas anuales">                                      
+                                    <input type="number" class="form-control" id="telefonopro" placeholder="#Ventas anuales">                                      
                                 </div>
                                 <div class="form-group">    
                                     <label>Nivel de repuracion <strong>(1-10)</strong></label>
-                                    <input type="number" class="form-control" id="direccion" placeholder="Nivel de reputacion">                                      
+                                    <input type="number" class="form-control" id="nivelpro" placeholder="#Nivel de reputacion">                                      
                                 </div>                                   
                                 <button id="crearButton" class="btn btn-success btn-sm"><i class="fa fa-hand-peace-o"></i> Crear Proveedor</button>                                       
                             </div>
