--- a/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
+++ b/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
@@ -127,7 +127,7 @@
                                 <div class="form-group">                                       
                                     <input type="text" class="form-control" id="direccion" placeholder="Direccion envio">                                      
                                 </div>                                   
-                                <button id="crearButton" class="btn btn-info btn-sm"><i class="fa fa-hand-peace-o"></i> Crear Cliente</button>                                       
+                                <button id="crearCliente" class="btn btn-info btn-sm"><i class="fa fa-hand-peace-o"></i> Crear Cliente</button>                                       
                             </div>
                         </div> 
                     </div>                
@@ -199,13 +199,13 @@
                                     <input type="text" class="form-control" id="direccionpro" placeholder="Direccion atencion">                                      
                                 </div>
                                 <div class="form-group">                                       
-                                    <input type="number" class="form-control" id="telefonopro" placeholder="#Ventas anuales">                                      
+                                    <input type="number" class="form-control" id="ventasPro" placeholder="#Ventas anuales">                                      
                                 </div>
                                 <div class="form-group">    
                                     <label>Nivel de repuracion <strong>(1-10)</strong></label>
                                     <input type="number" class="form-control" id="nivelpro" placeholder="#Nivel de reputacion">                                      
                                 </div>                                   
-                                <button id="crearButton" class="btn btn-success btn-sm"><i class="fa fa-hand-peace-o"></i> Crear Proveedor</button>                                       
+                                <button id="crearProveedor" class="btn btn-success btn-sm"><i class="fa fa-hand-peace-o"></i> Crear Proveedor</button>                                       
                             </div>
                         </div> 
                     </div>                
@@ -238,7 +238,7 @@
                         <thead>
                         <th>#</th>                        
                         <th>Nombre</th>                        
-                        <th>Reputación</th>                        
+                        <th>Reputación social</th>                        
                         </thead>
                         <tbody> </tbody>
                     </table>
@@ -250,7 +250,10 @@
         <script src="./js/cliente.js"></script>
         <script src="./js/tipodocumento.js"></script>   
         <script src="./js/crearCliente.js"></script>
+        <script src="./js/crearProveedor.js"></script>
         <script src="./js/validarCliente.js"></script>
+        <script src="./js/proveedor.js"></script>
         <script src="./js/alertify/alertify.min.js"></script>
+        
     </body>
 </html>
