*Iniciar sesion para usuarios Proveedor funcional.

--- a/marketkolo/marketkolo/src/main/webapp/index.html
+++ b/marketkolo/marketkolo/src/main/webapp/index.html
@@ -62,6 +62,7 @@
             </div>	
                     
         <script src="./js/sesionCliente.js"></script>
+        <script src="./js/sesionProveedor.js"></script>
         <script src="./js/alertify/alertify.min.js"></script>
     </body>
 </html>
