--- a/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
+++ b/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
@@ -148,16 +148,18 @@
 
                                     <div style="margin-bottom: 20px" class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                        <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="# Nit">                                        
+                                        <input id="usuariopro" type="text" class="form-control" name="username" value="" placeholder="# Nit">                                        
                                     </div>
 
                                     <div style="margin-bottom: 20px" class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                        <input id="login-password" type="password" class="form-control" name="password" placeholder="Contraseña">
+                                        <input id="clavepro" type="password" class="form-control" name="password" placeholder="Contraseña">
                                     </div>
                                     <div style=" margin-bottom: 10px" >  
                                         <div class="controls">
+                                            <div id="conectarpro">
                                             <a id="btn-login" href="#" class="btn btn-success btn-sm">Ingresar</a>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -252,6 +254,7 @@
         <script src="./js/crearCliente.js"></script>
         <script src="./js/crearProveedor.js"></script>
         <script src="./js/validarCliente.js"></script>
+        <script src="./js/validarProveedor.js"></script>
         <script src="./js/proveedor.js"></script>
         <script src="./js/alertify/alertify.min.js"></script>
         
