--- a/marketkolo/marketkolo/src/main/webapp/crearProducto.html
+++ b/marketkolo/marketkolo/src/main/webapp/crearProducto.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>MarketPlace KoLo - Crear Cliente</title>
+        <title>MarketPlace KoLo - Crear Producto</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -27,9 +27,9 @@ and open the template in the editor.
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">Clientes<span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="#">Productos<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Clientes</a></li>
                         <li><a href="#">Proveedores</a></li>
-                        <li><a href="#">Productos</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,35 +38,35 @@ and open the template in the editor.
             <center><input type="button" name="edit" value="Volver" class="btn btn-info" id="button" onclick="location.href = 'index.html';"></center>
         </div>
         <div class="col-md-8">
-            <center><h2>Formulario Cliente:</h2></center><br>            
-            <div class="form-group" id="TiposDocumentos">
-                <label class="control-label">Tipo de documento</label>
-                <select name="idtipoDocumento" id="idtipoDocumento" class="form-control">                       
+            <center><h2>Formulario Producto:</h2></center><br>            
+            <div class="form-group" id="idProducto">
+                <label class="control-label">ID de producto</label>
+                <select name="idProducto" id="idProducto" class="form-control">                       
                 </select>
             </div>
             <div class="form-group">
-                <label class="control-label">Numero de Documento</label>                                                    
-                <input class="form-control" id="numeroDocumento"  type="number" placeholder="Ingresar el número de documento de identidad">
+                <label class="control-label">Nombre de producto</label>                                                    
+                <input class="form-control" id="nombreProducto"  type="text" placeholder="Ingresar el nombre del producto a crear">
             </div>
             <div class="form-group">
-                <label class="control-label">Nombres</label>
-                <input class="form-control" id="nombres" type="text" placeholder="Ingresar tus nombres">
+                <label class="control-label">Valor unitario</label>
+                <input class="form-control" id="valorUnitario" type="number" placeholder="Ingresar el valor unitario del producto">
             </div>
             <div class="form-group">
-                <label class="control-label">Apellidos</label>
-                <input class="form-control" id="apellidos" type="text" placeholder="Ingresar tus apellidos">
+                <label class="control-label">Marca Producto</label>
+                <input class="form-control" id="marcaProducto" type="text" placeholder="Ingresar la marca del producto">
             </div>
             <div class="form-group">
-                <label class="control-label">Correo</label>
-                <input class="form-control" id="correo"  type="text" placeholder="Ingresar un correo electronico válido">
+                <label class="control-label">Garantía del producto</label>
+                <input class="form-control" id="garantiaProducto"  type="text" placeholder="Ingresar la garantía del producto en días">
             </div>
             <div class="form-group">
-                <label class="control-label">Dirección</label>
-                <input class="form-control" id="direccion"  type="text" placeholder="Ingresar la direccion de tu residencia">
+                <label class="control-label">Número de unidades disponibles del producto</label>
+                <input class="form-control" id="stockProducto"  type="number" placeholder="Ingresar la cantidad de unidades disponibles">
             </div>
             <div class="form-group">
-                <label class="control-label">Telefono</label>
-                <input class="form-control" id="telefono"  type="number" placeholder="Ingresar un número telefonico de contacto">
+                <label class="control-label">URL de la imagen del producto</label>
+                <input class="form-control" id="imagenProducto"  type="number" placeholder="Ingresar la ruta donde se encuentra la imagen del producto">
             </div>
             <div class="form-group">
                 <label class="control-label">Contraseña</label>
