Personalización Index (página principal) Creación Mostrar productos.html

--- a/marketkolo/marketkolo/src/main/webapp/index.html
+++ b/marketkolo/marketkolo/src/main/webapp/index.html
@@ -52,8 +52,12 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="home-content">
+                                <img src="http://www.konradlorenz.edu.co/templates/openweb-j17/images/logo.png" align="top">
                                 <h5>Bienvenido a</h5>
-                                <h1>MARKETPLACE <span>Kolo</span></h1>                                
+                                <h1>MARKETPLACE <span>Kolo</span></h1> 
+                                <iframe width="100" height="50" src="https://www.youtube.com/embed/JRftXCiqfQ8?autoplay=1" align="right">
+                                </iframe>
+                                <center><iframe src="https://giphy.com/embed/fAhOtxIzrTxyE" width="480" height="250" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/shopping-fAhOtxIzrTxyE"></a></p></center>
                             </div>
                         </div>
                     </div>
