--- a/marketkolo/marketkolo/src/main/webapp/crearProducto.html
+++ b/marketkolo/marketkolo/src/main/webapp/crearProducto.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
         <title>MarketPlace KoLo - Crear Producto</title>
@@ -73,11 +68,11 @@ and open the template in the editor.
                 <input class="form-control" id="clave"  type="text" placeholder="Ingresar una contraseña">
             </div>
 
-            <center><button id="crearButton" class="btn btn-primary">Crear Cliente</button></center><br><br>
+            <center><button id="crearButton" class="btn btn-primary">Crear Producto</button></center><br><br>
         </div>
         <div class="col-md-1">
         </div>
-        <script src="./js/crearCliente.js"></script>
-        <script src="./js/tipodocumento.js"></script>
+        <script src="./js/crearProducto.js"></script>
+        <!--<script src="./js/tipodocumento.js"></script>-->
     </body>
 </html>
