Personalización Index (página principal) Creación crearProducto.html Creación de crearProducto.js

--- a/marketkolo/marketkolo/src/main/webapp/crearProducto.html
+++ b/marketkolo/marketkolo/src/main/webapp/crearProducto.html
@@ -53,7 +53,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Garantía del producto</label>
-                <input class="form-control" id="garantiaProducto"  type="text" placeholder="Ingresar la garantía del producto en días">
+                <input class="form-control" id="garantiaProducto"  type="number" placeholder="Ingresar la garantía del producto en días">
             </div>
             <div class="form-group">
                 <label class="control-label">Número de unidades disponibles del producto</label>
@@ -61,13 +61,9 @@
             </div>
             <div class="form-group">
                 <label class="control-label">URL de la imagen del producto</label>
-                <input class="form-control" id="imagenProducto"  type="number" placeholder="Ingresar la ruta donde se encuentra la imagen del producto">
+                <input class="form-control" id="imagenProducto"  type="text" placeholder="Ingresar la ruta donde se encuentra la imagen del producto">
             </div>
-            <div class="form-group">
-                <label class="control-label">Contraseña</label>
-                <input class="form-control" id="clave"  type="text" placeholder="Ingresar una contraseña">
-            </div>
-
+            
             <center><button id="crearButton" class="btn btn-primary">Crear Producto</button></center><br><br>
         </div>
         <div class="col-md-1">
