--- a/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
+++ b/marketkolo/marketkolo/src/main/webapp/inicioSesion.html
@@ -5,7 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- Cargue de archivos general de la aplicación -->
         <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css" />   
+        <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css" />  
+        <link href="./css/Menustyle.css" rel="stylesheet" type="text/css" /> 
         <link rel='stylesheet' href='./js/alertify/css/alertify.css' type="text/css">
         <link rel='stylesheet' href='./js/alertify/css/themes/default.css' type="text/css">
         <link rel="stylesheet" type="text/css" href="TableFilter/filtergrid.css">
