--- a/marketkolo/marketkolo/src/main/webapp/productos.html
+++ b/marketkolo/marketkolo/src/main/webapp/productos.html
@@ -6,6 +6,7 @@
         <!-- Cargue de archivos general de la aplicación -->
         <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css" />  
+        <link href="./css/Menustyle.css" rel="stylesheet" type="text/css" /> 
         <link rel='stylesheet' href='./js/alertify/css/alertify.css' type="text/css">
         <link rel='stylesheet' href='./js/alertify/css/themes/default.css' type="text/css">
         <link rel="stylesheet" type="text/css" href="TableFilter/filtergrid.css">          
@@ -48,9 +49,10 @@
         </nav><br><br>
         <div class="row">
             <div class="col-md-3">
-
+                <div class="col-md-2" id="crearProducto"></div>
             </div>
             <div class="col-md-6">
+                
                 <div class="container-fluid" id="tableProductos">
                     <table class="table table-striped table-bordered table-condensed">
                         <thead>
